kubernetes/main/apps/network/crowdsec/app/ingress-appsec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-appsec
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: zerossl-prod
    external-dns.alpha.kubernetes.io/target: internal.${PUBLIC_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/private-key-rotation-policy: always
    cert-manager.io/private-key-algorithm: Ed25519
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - crowdsec-appsec.${PUBLIC_DOMAIN}
      secretName: crowdsec-appsec-tls
  rules:
    - host: crowdsec-appsec.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crowdsec-appsec-service
                port:
                  name: appsec
